--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "../styles/abstracts/functions";
+@import "../styles/abstracts/mixins";
+@import "../styles/abstracts/variables";
+//
+@import "../styles/base/base";
+@import "../styles/base/animations";
+@import "../styles/base/typography";
+@import "../styles/base/util";
+//
+@import "../styles/components/button";
+//
+@import "../styles/layout/header";
+//
+@import "../styles/pages/home";
