--- a/src/app/natours/natours.component.scss
+++ b/src/app/natours/natours.component.scss
@@ -1,3 +1,4 @@
+// @import "../../../styles/abstracts/variables";
 // .header {
 //     height: 95vh;
 //     background-image: linear-gradient( to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)), url(../../assets/hero.jpeg);
