--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@
 //
 @import "../styles/components/button";
 //
+@import "../styles/layout/grid";
 @import "../styles/layout/header";
 //
 @import "../styles/pages/home";
