--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -1,6 +1,6 @@
 .header {
     height: 95vh;
-    background-image: linear-gradient( to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)), url(../../assets/hero.jpeg);
+    background-image: linear-gradient( to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8)), url(../../src/assets/hero.jpeg);
     background-size: cover;
     background-position: top;
     position: relative;
