updates to natours

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,9 @@
 @import "../styles/base/util";
 //
 @import "../styles/components/button";
+@import "../styles/components/composition";
+@import "../styles/components/feature-box";
+@import "../styles/components/cards";
 //
 @import "../styles/layout/grid";
 @import "../styles/layout/header";
