updates to form

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,9 @@
 @import "../styles/components/composition";
 @import "../styles/components/feature-box";
 @import "../styles/components/cards";
+@import "../styles/components/story";
+@import "../styles/components/bg-video";
+@import "../styles/components/form";
 //
 @import "../styles/layout/grid";
 @import "../styles/layout/header";
