--- a/src/app/natours/natours.component.html
+++ b/src/app/natours/natours.component.html
@@ -201,6 +201,87 @@
             <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
     </section>
+
+    <section class="section-stories">
+        <div class="bg-video">
+            <video class="bg-video__content" autoplay muted loop>
+        <source src="../../assets/video.mp4" type="video/mp4">
+        <source src="../../assets/video.webm" type="video/webm">
+        Your browser is not supported
+      </video>
+        </div>
+        <div class="center-text margin-bottom-big">
+            <h2 class="heading-secondary">
+                We make people genuinley happy
+            </h2>
+        </div>
+
+        <div class="row">
+            <div class="story">
+                <figure class="story__shape">
+                    <img src="../../assets/nat-8.jpeg" alt="Person on a tour" class="story__img">
+                    <figcaption class="story__caption">
+                        Mary Smith
+                    </figcaption>
+                </figure>
+                <div class="story__text">
+                    <h3 class="heading-tertiary margin-bottom-small">
+                        I had the best week ever with my family
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus fuga molestiae id vero error doloremque tempore sed sit qui officia.Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus fuga molestiae id vero error doloremque tempore sedLorem
+                        tempore sed sit qui officia. sit qui officia.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="story">
+                <figure class="story__shape">
+                    <img src="../../assets/nat-9.jpeg" alt="Person on a tour" class="story__img">
+                    <figcaption class="story__caption">
+                        Jack Wilson
+                    </figcaption>
+                </figure>
+                <div class="story__text">
+                    <h3 class="heading-tertiary margin-bottom-small">
+                        Wow my life is completely different now
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus fuga molestiae id vero error doloremque tempore sed sit qui officia.Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus fuga molestiae id vero error doloremque tempore sedLorem
+                        tempore sed sit qui officia. sit qui officia.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="center-text margin-top-huge">
+            <a href="#" class="btn-text">Read all stories &rarr;</a>
+        </div>
+    </section>
+
+    <section class="section-book">
+        <div class="row">
+            <div class="book">
+                <div class="book__form">
+                    <form action="#" class="form">
+                        <div class=" margin-bottom-medium">
+                            <h2 class="heading-secondary">
+                                Start booking now
+                            </h2>
+                        </div>
+                        <div class="form__group">
+                            <input id="name" type="text" placeholder="Full Name" required class="form__input">
+                            <label for="name" class="form__label">Full Name</label>
+                        </div>
+                        <div class="form__group">
+                            <input id="email" type="text" placeholder="Email address" required class="form__input">
+                            <label for="email" class="form__label">Email</label>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
 
 <!-- <section class="grid-test">
