updates to popup

--- a/src/app/natours/natours.component.html
+++ b/src/app/natours/natours.component.html
@@ -1,6 +1,8 @@
 <div class="navigation">
-    <input type="checkbox" id="navi-toggle" class="navigation__checkboc">
-    <label for="navi-toggle" class="navigation__button">MENU</label>
+    <input type="checkbox" id="navi-toggle" class="navigation__checkbox">
+    <label for="navi-toggle" class="navigation__button">
+      <span class="navigation__icon">&nbsp;</span>
+    </label>
 
     <div class="navigation__background">
         &nbsp;
@@ -346,6 +348,26 @@
         </div>
     </div>
 </footer>
+
+<div class="popup">
+    <div class="popup__content">
+        <div class="popup__left">
+            <img src="../../assets/nat-8.jpeg" alt="Tour photo" class="popup__img">
+            <img src="../../assets/nat-9.jpeg" alt="Tour photo" class="popup__img">
+        </div>
+        <div class="popup__right">
+            <h2 class="heading-secondary margin-bottom-small">Start booking now</h2>
+            <h3 class="heading-tertiary margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+            <p class="popup__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, voluptatum eum! At nobis omnis ullam iure deleniti eius, cum qui libero quidem quaerat perspiciatis cumque blanditiis alias! Velit, repudiandae quidem? Quam, quia non. Delectus quae deserunt
+                quos? Voluptate itaque excepturi facere! Est illum sint quod, libero totam inventore minima rerum ducimus, neque fuga itaque! Vel, atque quas accusamus ea pariatur, voluptates porro quis commodi repellat, dolor temporibus exercitationem
+                maiores corporis placeat? Recusandae numquam dicta odio vel at, harum distinctio officia officiis maxime consequatur voluptatum voluptate suscipit dignissimos ut aliquam molestiae commodi sequi cumque eligendi dolorum laborum facilis!
+                Ut, minus rerum.
+            </p>
+            <a href="#" class="btn btn--green">Book now</a>
+        </div>
+    </div>
+</div>
 
 <!-- <section class="grid-test">
     <div class="row">
