--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,7 @@
 @import "../styles/components/story";
 @import "../styles/components/bg-video";
 @import "../styles/components/form";
+@import "../styles/components/popup";
 // Layouts
 @import "../styles/layout/grid";
 @import "../styles/layout/header";
