--- a/src/app/natours/natours.component.html
+++ b/src/app/natours/natours.component.html
@@ -150,7 +150,7 @@
                                 <p class="card__price-only">Only</p>
                                 <p class="card__price-value">$297</p>
                             </div>
-                            <a href="#" class="btn btn--white">Book now!</a>
+                            <a href="#popup" class="btn btn--white">Book now!</a>
                         </div>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
                                 <p class="card__price-only">Only</p>
                                 <p class="card__price-value">$497</p>
                             </div>
-                            <a href="#" class="btn btn--white">Book now!</a>
+                            <a href="#popup" class="btn btn--white">Book now!</a>
                         </div>
                     </div>
                 </div>
@@ -212,7 +212,7 @@
                                 <p class="card__price-only">Only</p>
                                 <p class="card__price-value">$897</p>
                             </div>
-                            <a href="#" class="btn btn--white">Book now!</a>
+                            <a href="#popup" class="btn btn--white">Book now!</a>
                         </div>
                     </div>
                 </div>
@@ -349,13 +349,14 @@
     </div>
 </footer>
 
-<div class="popup">
+<div class="popup" id="popup">
     <div class="popup__content">
         <div class="popup__left">
             <img src="../../assets/nat-8.jpeg" alt="Tour photo" class="popup__img">
             <img src="../../assets/nat-9.jpeg" alt="Tour photo" class="popup__img">
         </div>
         <div class="popup__right">
+            <a href="#section-tours" class="popup__close">&times;</a>
             <h2 class="heading-secondary margin-bottom-small">Start booking now</h2>
             <h3 class="heading-tertiary margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
             <p class="popup__text">
