--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -7,5 +7,16 @@
 }
 
 html {
-    font-size: 62.5% // 10px
+    font-size: 62.5%; //1rem = 10px/16px = 62.5%
+    // width < 1200
+    @include respond(tab-land) {
+        font-size: 56.25%;
+    }
+    // width < 900
+    @include respond(tab-port) {
+        font-size: 50%;
+    }
+    @include respond(big-desktop) {
+        font-size: 75%;
+    }
 }
