--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -20,3 +20,12 @@ html {
         font-size: 75%;
     }
 }
+
+body {
+    box-sizing: border-box;
+    // padding: 3rem;
+    // width < 900
+    @include respond(tab-port) {
+        padding: 0;
+    }
+}
