--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -1,10 +1,8 @@
 body {
     font-family: "Lato", sans-serif;
-    // font-size: 16px;
+    font-weight: 400;
     line-height: 1.7;
     color: $color-grey-dark;
-    padding: 3rem;
-    box-sizing: border-box;
 }
 
 .heading-primary {
@@ -22,7 +20,11 @@ body {
         animation-name: moveInLeft;
         animation-duration: 2s;
         animation-timing-function: ease-out;
-        // animation-delay: 3s;
+        // width < 600
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-size: 5rem;
+        }
     }
     &--sub {
         display: block;
@@ -30,6 +32,11 @@ body {
         font-weight: 700;
         letter-spacing: 1.75rem;
         animation: moveInRight 2s ease-out;
+        // width < 600
+        @include respond(phone) {
+            letter-spacing: 0.5rem;
+            // font-family: 5rem;
+        }
     }
 }
 
@@ -43,6 +50,14 @@ body {
     color: transparent;
     letter-spacing: 2px;
     transition: all .2s;
+    // width < 900
+    @include respond(tab-port) {
+        font-size: 3rem;
+    }
+    // width < 600
+    @include respond(phone) {
+        font-size: 2.5rem;
+    }
     &:hover {
         transform: skewY(2deg) skewX(15deg) scale(1.1);
         text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
