--- a/styles/base/_util.scss
+++ b/styles/base/_util.scss
@@ -8,10 +8,18 @@
 
 .margin-bottom-medium {
     margin-bottom: 4rem !important;
+    // width < 900
+    @include respond(tab-port) {
+        margin-bottom: 3rem !important;
+    }
 }
 
 .margin-bottom-big {
     margin-bottom: 8rem !important;
+    // width < 900
+    @include respond(tab-port) {
+        margin-bottom: 5rem !important;
+    }
 }
 
 .margin-top-big {
