--- a/styles/components/_composition.scss
+++ b/styles/components/_composition.scss
@@ -7,17 +7,41 @@
         position: absolute;
         z-index: 10;
         transition: all .2s;
+        // width < 900
+        @include respond(tab-port) {
+            float: left;
+            position: relative;
+            width: 33.333333%;
+            box-shadow: 0 1.5rem 3rem rgba($color-black, .2);
+        }
         &--p1 {
             left: 0px;
             top: -2rem;
+            // width < 900
+            @include respond(tab-port) {
+                top: 0;
+                transform: scale(1.2);
+            }
         }
         &--p2 {
             right: 0px;
             top: 2rem;
+            // width < 900
+            @include respond(tab-port) {
+                top: -1rem;
+                transform: sclae(1.3);
+                z-index: 100;
+            }
         }
         &--p3 {
             left: 20%;
             top: 10rem;
+            // width < 900
+            @include respond(tab-port) {
+                top: 1rem;
+                left: 0;
+                transform: scale(1.1);
+            }
         }
         &:hover {
             transform: scale(1.05) translateX(-.5rem);
