--- a/styles/components/_feature-box.scss
+++ b/styles/components/_feature-box.scss
@@ -6,9 +6,17 @@
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
     transition: transform .3s;
+    // width < 900
+    @include respond(tab-port) {
+        padding: 2rem;
+    }
     &__icon {
         width: 20%;
         margin-bottom: .5rem;
+        // width < 900
+        @include respond(tab-port) {
+            margin: 0;
+        }
     }
     &:hover {
         transform: translateY(-1.5rem) scale(1.03);
