--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -3,9 +3,17 @@
     padding: 10rem 0;
     font-size: 1.4rem;
     color: $color-grey-light-1;
+    // width < 900
+    @include respond(tab-port) {
+        padding: 8rem 0;
+    }
     &__logo-box {
         text-align: center;
         margin-bottom: 8rem;
+        // width < 900
+        @include respond(tab-port) {
+            margin-bottom: 6rem;
+        }
     }
     &__logo {
         width: 30rem;
@@ -15,6 +23,11 @@
         border-top: 1px solid $color-grey-dark;
         padding-top: 2rem;
         display: inline-block;
+        // width < 900
+        @include respond(tab-port) {
+            width: 100%;
+            text-align: center;
+        }
     }
     &__list {
         list-style: none;
@@ -44,5 +57,11 @@
         padding-top: 2rem;
         width: 80%;
         float: right;
+        // width < 900
+        @include respond(tab-port) {
+            width: 100%;
+            float: none;
+            text-align: center;
+        }
     }
 }
