--- a/styles/layout/_grid.scss
+++ b/styles/layout/_grid.scss
@@ -1,15 +1,32 @@
 .row {
     max-width: $grid-width;
     margin: 0 auto;
-    margin-bottom: $gutter-vertical;
     &:not(:last-child) {
         margin-bottom: $gutter-vertical;
+        // width < 900
+        @include respond(tab-port) {
+            margin-bottom: $gutter-vertical-small;
+        }
+    }
+    // width < 900
+    @include respond(tab-port) {
+        max-width: 50rem;
+        padding: 0 3rem;
     }
     @include clearFix;
     [class^=col-] {
         float: left;
         &:not(:last-child) {
             margin-right: $gutter-horizontal;
+            // width < 900
+            @include respond(tab-port) {
+                margin-right: 0;
+                margin-bottom: $gutter-vertical-small;
+            }
+        }
+        // width < 900
+        @include respond(tab-port) {
+            width: 100% !important;
         }
     }
     .col-1-of-2 {
